<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:paddingVertical="50dp"
    android:paddingHorizontal="28dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:textSize="16sp"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:id="@+id/tv_logout_before"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_logout_before"/>

    <TextView
        android:paddingHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_logout_before"
        android:textSize="16sp"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:id="@+id/tv_logout_before_remind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_logout_before_remind"/>

    <LinearLayout
        android:layout_below="@id/tv_logout_before_remind"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_logout"
        android:text="@string/txt_logout"
        android:layout_marginEnd="7dp"
        style="@style/style_btn_white"/>
    <Button
        android:layout_marginStart="7dp"
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        style="@style/style_btn_green"/>


    </LinearLayout>



</RelativeLayout>