<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterFragment"
    android:layout_marginHorizontal="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_card_view"
        android:paddingStart="30dp"
        android:paddingEnd="40dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/nunito"
            android:scaleType="centerCrop"
            android:text="@string/txt_register_please_sign_up"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:text="@string/txt_register_role"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/spinner_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_role"
            android:layout_marginHorizontal="25dp"
            android:text="R"
            android:textSize="14sp"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:hint="@string/full_name"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tv_company_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_full_name"
            android:layout_toEndOf="@id/et_phone_code"
            app:endIconMode="clear_text"
            app:errorEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:fontFamily="@font/nunito"
                android:hint="@string/txt_register_phonenumber"
                android:inputType="phone"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.hbb20.CountryCodePicker
            app:ccp_arrowSize="12dp"
            android:id="@+id/et_phone_code"
            android:lines="1"
            android:inputType="phone"
            app:ccp_textSize="14sp"
            android:layout_marginTop="14dp"
            android:layout_below="@id/tv_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_defaultNameCode="KG"
            app:ccp_showNameCode="false"
            android:fontFamily="@font/nunito"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_company_name"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:hint="@string/txt_register_password"
                android:inputType="textPassword"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/btn_container"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/tv_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/buttonLogin"
                style="@style/style_btn_green"
                android:text="@string/btn_register_getotp"
                app:cornerRadius="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/nunito"
                android:text="@string/text_register_underbutton"
                android:textSize="7sp" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_container"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginVertical="25dp">

            <TextView
                android:layout_marginEnd="10dp"
                android:id="@+id/txt_ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/text_register_alreadyamember"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/txt_register_login"
                android:textColor="@color/colorGreenBrand"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</RelativeLayout>